[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/PlayLogic.gd" type="Script" id=1]
[ext_resource path="res://tiktaktoe_grid.png" type="Texture" id=2]
[ext_resource path="res://assets/square.tscn" type="PackedScene" id=3]

[node name="PlayLevel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="TextureRect" parent="CenterContainer"]
margin_left = 335.0
margin_top = 123.0
margin_right = 689.0
margin_bottom = 477.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 354, 354 )
texture = ExtResource( 2 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
margin_left = 335.0
margin_top = 123.0
margin_right = 689.0
margin_bottom = 477.0
rect_min_size = Vector2( 354, 354 )
custom_constants/vseparation = 24
custom_constants/hseparation = 24
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="square1" parent="CenterContainer/GridContainer" instance=ExtResource( 3 )]
margin_right = 102.0
margin_bottom = 102.0
button_id = 1

[node name="square2" parent="CenterContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 126.0
margin_right = 228.0
margin_bottom = 102.0
button_id = 2

[node name="square3" parent="CenterContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 252.0
margin_right = 354.0
margin_bottom = 102.0
button_id = 3

[node name="square4" parent="CenterContainer/GridContainer" instance=ExtResource( 3 )]
margin_top = 126.0
margin_right = 102.0
margin_bottom = 228.0
button_id = 4

[node name="square5" parent="CenterContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 126.0
margin_top = 126.0
margin_right = 228.0
margin_bottom = 228.0
button_id = 5

[node name="square6" parent="CenterContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 252.0
margin_top = 126.0
margin_right = 354.0
margin_bottom = 228.0
button_id = 6

[node name="square7" parent="CenterContainer/GridContainer" instance=ExtResource( 3 )]
margin_top = 252.0
margin_right = 102.0
margin_bottom = 354.0
button_id = 7

[node name="square8" parent="CenterContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 126.0
margin_top = 252.0
margin_right = 228.0
margin_bottom = 354.0
button_id = 8

[node name="square9" parent="CenterContainer/GridContainer" instance=ExtResource( 3 )]
margin_left = 252.0
margin_top = 252.0
margin_right = 354.0
margin_bottom = 354.0
button_id = 9

[node name="Control" type="Control" parent="."]
margin_left = 165.0
margin_top = 98.0
margin_right = 205.0
margin_bottom = 138.0
[connection signal="button_pressed" from="CenterContainer/GridContainer/square1" to="." method="_on_button_pressed"]
[connection signal="button_pressed" from="CenterContainer/GridContainer/square2" to="." method="_on_button_pressed"]
[connection signal="button_pressed" from="CenterContainer/GridContainer/square3" to="." method="_on_button_pressed"]
[connection signal="button_pressed" from="CenterContainer/GridContainer/square4" to="." method="_on_button_pressed"]
[connection signal="button_pressed" from="CenterContainer/GridContainer/square5" to="." method="_on_button_pressed"]
[connection signal="button_pressed" from="CenterContainer/GridContainer/square6" to="." method="_on_button_pressed"]
[connection signal="button_pressed" from="CenterContainer/GridContainer/square7" to="." method="_on_button_pressed"]
[connection signal="button_pressed" from="CenterContainer/GridContainer/square8" to="." method="_on_button_pressed"]
[connection signal="button_pressed" from="CenterContainer/GridContainer/square9" to="." method="_on_button_pressed"]
